--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
+    "@angular/animations": "^14.2.1",
     "@angular/cdk": "^13.0.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
+    "@angular/common": "^14.2.1",
+    "@angular/compiler": "^14.2.1",
+    "@angular/core": "^14.2.1",
+    "@angular/forms": "^14.2.1",
     "@angular/material": "^13.0.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/platform-browser": "^14.2.1",
+    "@angular/platform-browser-dynamic": "^14.2.1",
+    "@popperjs/core": "^2.11.6",
+
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "swall": "^0.0.2",
     "sweetalert2": "^11.12.1",
